# board_game_alpha_test

./: .gitignore  Cargo.toml
src/: main.rs
src/game/: game.rs  game_state.rs  match_state.rs  mod.rs  new_game.rs
src/game/core/: game.rs  game_commands.rs  game_state.rs  mod.rs
src/game/core/lobby/: match_state.rs  mod.rs  new_game.rs
src/game/core/types/: moves.rs
src/game/game_models/: activation_costs.rs  costs.rs  footprints.rs  mod.rs  recepies.rs  resource.rs  stats.rs  structure.rs  tiles.rs  upgrades.rs
src/game/game_models/data/: activation_costs.rs  costs.rs  footprints.rs  mod.rs  placers.rs  recepies.rs  road_connection_requirements.rs  spaced_placements.rs  stats.rs
src/game/game_models/data/structures/: activation_costs.rs  costs.rs  mod.rs  recepies.rs  spaced_placements.rs
src/game/game_models/data/units/: costs.rs  footprints.rs  mod.rs  placers.rs
src/game/game_models/functions/: ability_active.rs  ability_passive.rs  mod.rs  placers.rs  upgrades.rs
src/game/game_models/types/: map.rs  mod.rs  resource.rs  structure.rs  tile.rs  tile_traits.rs  unit.rs
src/server/: control_message.rs  control_message_handler.rs  message.rs  message_handler.rs  mod.rs  socket_handler.rs  wss.rs
src/server/handlers/: control_message.rs  game_message.rs  mod.rs  wss_message.rs
src/server/messages/: control_commands.rs  game_commands.rs  mod.rs  wss_message.rs
src/storage/: active.rs  mod.rs  operations_game.rs  operations_socket.rs
src/storage/operations/: game.rs  mod.rs  socket.rs
