[package]
name = "board_game_alpha_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version="1.35.1", features=["full"]}
tokio-tungstenite = "0.21.0"
once_cell = "1.10.0" # lazy mutex
serde_any = "0.5.0" # JSON save and load to FS
serde = { version = "1.0", features = ["derive"] }